# grcp

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp  telemetry.proto  telemetry_service.cpp  telemetry_service.h
